cmake_minimum_required(VERSION 3.22)

project(Y2KaoZNumeric VERSION 0.0.0.0)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory("src/Y2KaoZ/Numeric/BigInt")

add_library(${PROJECT_NAME}Shared SHARED $<TARGET_OBJECTS:BigIntOptimized>)
target_include_directories(${PROJECT_NAME}Shared PUBLIC "./src/")
install(TARGETS ${PROJECT_NAME}Shared DESTINATION "lib")
set_target_properties(${PROJECT_NAME}Shared
    PROPERTIES
    OUTPUT_NAME "${PROJECT_NAME}-${PROJECT_VERSION}"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/bin"
)

add_library(${PROJECT_NAME}SharedDebug SHARED $<TARGET_OBJECTS:BigIntDebug>)
target_include_directories(${PROJECT_NAME}SharedDebug PUBLIC "./src/")
install(TARGETS ${PROJECT_NAME}SharedDebug DESTINATION "lib")
set_target_properties(${PROJECT_NAME}SharedDebug
    PROPERTIES
    OUTPUT_NAME "${PROJECT_NAME}-${PROJECT_VERSION}_d"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/bin"
)

add_library(${PROJECT_NAME}Static STATIC $<TARGET_OBJECTS:BigIntOptimized>)
target_include_directories(${PROJECT_NAME}Static PUBLIC "./src/")
install(TARGETS ${PROJECT_NAME}Static DESTINATION "lib")
set_target_properties(${PROJECT_NAME}Static
    PROPERTIES
    OUTPUT_NAME "${PROJECT_NAME}-${PROJECT_VERSION}"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/bin"
)

add_library(${PROJECT_NAME}StaticDebug STATIC $<TARGET_OBJECTS:BigIntDebug>)
target_include_directories(${PROJECT_NAME}StaticDebug PUBLIC "./src/")
install(TARGETS ${PROJECT_NAME}StaticDebug DESTINATION "lib")
set_target_properties(${PROJECT_NAME}StaticDebug
    PROPERTIES
    OUTPUT_NAME "${PROJECT_NAME}-${PROJECT_VERSION}_d"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/bin"
)

configure_file(CMakeLists.txt.in "${CMAKE_BINARY_DIR}/${PROJECT_NAME}/CMakeLists.txt" @ONLY)

add_subdirectory("./tests")
